[package]
authors.workspace    = true
categories.workspace = true
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "check_graphql_parser"
repository.workspace = true
version              = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
check_console         = { workspace = true }
check_diagnostics     = { workspace = true }
check_graphql_factory = { workspace = true }
check_graphql_syntax  = { workspace = true }
check_parser          = { workspace = true }
check_rowan           = { workspace = true }
check_unicode_table   = { workspace = true }
tracing               = { workspace = true }
unicode-bom           = { workspace = true }

[dev-dependencies]
check_test_utils  = { workspace = true }
criterion         = { package = "codspeed-criterion-compat", version = "=3.0.3" }
insta             = { workspace = true }
quickcheck        = { workspace = true }
quickcheck_macros = { workspace = true }
tests_macros      = { workspace = true }

[target.'cfg(target_os = "windows")'.dev-dependencies]
mimalloc = { workspace = true }

[target.'cfg(all(target_family="unix", not(all(target_arch = "aarch64", target_env = "musl"))))'.dev-dependencies]
tikv-jemallocator = { workspace = true }

[lints]
workspace = true


[[bench]]
harness = false
name    = "graphql_parser"
