
[package]
authors.workspace    = true
categories.workspace = true
description          = "Check's semantic model for GraphQL"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "check_graphql_semantic"
repository.workspace = true
version              = "0.0.0"

[lints]
workspace = true

[dependencies]
check_graphql_syntax = { workspace = true }
check_rowan          = { workspace = true }
rustc-hash           = { workspace = true }

[dev-dependencies]
check_graphql_parser = { path = "../check_graphql_parser" }
