[package]
authors.workspace    = true
description          = "Utilities to create GritQL AST for check_grit_parser"
documentation        = "https://docs.rs/check_grit_factory"
edition.workspace    = true
license.workspace    = true
name                 = "check_grit_factory"
repository.workspace = true
version              = "0.5.7"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
check_grit_syntax = { workspace = true }
check_rowan       = { workspace = true }

[lints]
workspace = true
