[package]
authors.workspace    = true
categories.workspace = true
description          = "Check's GritQL formatter"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "check_grit_formatter"
repository.workspace = true
version              = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
check_formatter   = { workspace = true }
check_grit_syntax = { workspace = true }
check_rowan       = { workspace = true }

[dev-dependencies]
check_configuration  = { path = "../check_configuration" }
check_formatter_test = { path = "../check_formatter_test" }
check_fs             = { path = "../check_fs" }
check_grit_factory   = { path = "../check_grit_factory" }
check_grit_parser    = { path = "../check_grit_parser" }
check_parser         = { path = "../check_parser" }
check_service        = { path = "../check_service" }
camino               = { workspace = true }
serde                = { workspace = true, features = ["derive"] }
serde_json           = { workspace = true }
tests_macros         = { path = "../tests_macros" }
# cargo-workspaces metadata
[package.metadata.workspaces]
independent = true

[lints]
workspace = true
