[package]
authors.workspace    = true
categories.workspace = true
description          = "Check's GritQL parser"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "check_grit_parser"
repository.workspace = true
version              = "0.1.0"

[dependencies]
check_console      = { workspace = true }
check_diagnostics  = { workspace = true }
check_grit_factory = { workspace = true }
check_grit_syntax  = { workspace = true }
check_parser       = { workspace = true }
check_rowan        = { workspace = true }
schemars           = { workspace = true, optional = true }
serde              = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true }
smallvec           = { workspace = true }
tracing            = { workspace = true }
unicode-bom        = { workspace = true }

[dev-dependencies]
check_test_utils  = { workspace = true }
insta             = { workspace = true }
quickcheck        = { workspace = true }
quickcheck_macros = { workspace = true }
tests_macros      = { workspace = true }

[features]
schemars = ["dep:schemars", "check_grit_syntax/schema"]

# cargo-workspaces metadata
[package.metadata.workspaces]
independent = true

[lints]
workspace = true
