[package]
authors.workspace    = true
categories.workspace = true
description          = "Check implementation for Grit Patterns"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "check_grit_patterns"
publish              = false
repository.workspace = true
version              = "0.0.1"

[dependencies]
check_analyze        = { workspace = true }
check_console        = { workspace = true }
check_css_parser     = { workspace = true }
check_css_syntax     = { workspace = true }
check_diagnostics    = { workspace = true }
check_grit_parser    = { workspace = true }
check_grit_syntax    = { workspace = true }
check_js_parser      = { workspace = true }
check_js_syntax      = { workspace = true }
check_parser         = { workspace = true }
check_rowan          = { workspace = true }
check_string_case    = { workspace = true }
camino               = { workspace = true }
grit-pattern-matcher = { workspace = true }
grit-util            = { workspace = true }
path-absolutize      = { version = "3.1.1", optional = false, features = ["use_unix_paths_on_wasm"] }
rand                 = { version = "=0.8.5" }
regex                = { workspace = true }
rustc-hash           = { workspace = true }
schemars             = { workspace = true, optional = true }
serde                = { workspace = true, features = ["derive"], optional = true }
serde_json           = { workspace = true, optional = true }

[dev-dependencies]
check_test_utils = { path = "../check_test_utils" }
insta            = { workspace = true }
tests_macros     = { path = "../tests_macros" }

[features]
schema = ["dep:schemars", "serde", "check_js_parser/schema"]
serde  = ["dep:serde", "dep:serde_json"]

[lints]
workspace = true
