[package]
authors.workspace    = true
categories.workspace = true
description          = "SyntaxKind and common rowan definitions for check_grit_parser"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "check_grit_syntax"
repository.workspace = true
version              = "0.5.7"

[dependencies]
check_rowan       = { workspace = true, features = ["serde"] }
check_string_case = { workspace = true }
camino            = { workspace = true }
schemars          = { workspace = true, optional = true }
serde             = { workspace = true, features = ["derive"] }

[features]
schema = ["schemars", "check_rowan/serde"]


[lints]
workspace = true
