[package]
authors.workspace    = true
description          = "Utilities to create HTML AST for check_html_parser"
documentation        = "https://docs.rs/check_html_factory"
edition.workspace    = true
license.workspace    = true
name                 = "check_html_factory"
repository.workspace = true
version              = "0.5.7"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
check_html_syntax = { workspace = true }
check_rowan       = { workspace = true }

[lints]
workspace = true
